update images and started canvas logic from previous code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
   
     <div id="start-screen" class="container">
-      <img src="./images/logo.png" width="500" alt="logo">
+      <!--<img src="./images/logo.png" width="500" alt="logo"> -->
       <button id="start-btn">Mission Start</button>
     </div>
     
