--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     
     <!-- GAME OVER SCREEN -->
     <div id="game-over-screen" class="container">
-      <img src="./images/gameover.png" width="500" alt="logo">
+      <img src="/Assets/images/gameover/gameover.jpg" width="500" alt="logo">
     </div>
 
 
 
   <script src="./js/main.js"></script>
-  <script src="./js/bird.js"></script>
-  <script src="./js/obstacle.js"></script>
+  <script src="/JS/player.js"></script>
+  <script src ="JS/tile.js"></script>
 
 </body>
 </html>
