--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="./JS/main.js"></script>
   <script src="./JS/player.js"></script>
   <script src ="./JS/tile.js"></script>
+  <script src ="./JS/enemy.js"></script>
 
 </body>
 </html>
