--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <!-- START SCREEN --> 
+<div>
+      <!-- START SCREEN --> 
     
   
     <div id="start-screen" class="container">
@@ -29,8 +30,9 @@
     
     <!-- GAME OVER SCREEN -->
     <div id="game-over-screen" class="container">
-      <img src="./Assets/images/gameover/gameover.jpg" width="500" alt="logo">
+      <button id="replay-btn">Resart</button>
     </div>
+</div>
 
 
 
